<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context="sky.chin.penpal.activities.RegisterActivity">

            <LinearLayout
                android:id="@+id/errorContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@android:color/darker_gray"
                android:padding="@dimen/activity_vertical_margin"
                android:visibility="gone">

                <TextView
                    android:id="@+id/txtError"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/holo_red_dark"
                    android:textAppearance="?android:textAppearanceMedium"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/activity_vertical_margin">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:text="@string/user_information"/>

                <EditText
                    android:id="@+id/regUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username"/>

                <EditText
                    android:id="@+id/regName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"/>

                <EditText
                    android:id="@+id/regPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/password"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:text="@string/email_address"/>

                <EditText
                    android:id="@+id/regEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:text="@string/birth_date"/>

                <Button
                    android:id="@+id/regBirthDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/select_birth_date"
                    style="?android:attr/borderlessButtonStyle"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:text="@string/gender"/>

                <Button
                    android:id="@+id/regGender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/select_gender"
                    style="?android:attr/borderlessButtonStyle"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:text="@string/current_location"/>

                <Button
                    android:id="@+id/regCountry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/select_country"
                    style="?android:attr/borderlessButtonStyle"/>

                <Button
                    android:id="@+id/regRegion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/select_region"
                    style="?android:attr/borderlessButtonStyle"/>

                <Button
                    android:id="@+id/btnSignUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>